--- a/still.html
+++ b/still.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="still.css"/>
     </head>
     <body>
-        <h1>Name Later</h1>
+        <h1>Concept Canvas</h1>
         <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed id risus vitae tortor scelerisque vestibulum. Maecenas a cursus nibh. Donec tellus quam, malesuada vitae neque ultricies, blandit consequat massa. Integer sit amet mi erat. Duis enim eros, egestas eget odio eget, faucibus porta urna. Nunc tincidunt imperdiet lectus, sed iaculis ipsum ultrices vitae. Cras at nisl nibh. Phasellus vel blandit tellus, ut venenatis mi. Morbi tristique, massa sit amet dictum hendrerit, ante urna gravida orci, finibus imperdiet urna neque sit amet sapien. Vivamus a nunc neque.</h3>
         <div class="nebula">
             <img src="stills/hiresnebula.png" width="940" height="540"/>
@@ -17,12 +17,19 @@
         <div class="frost">
             <img src="stills/hiresfrostpink.png" width = "940" height = "540"/>
         </div>
+        <div class = "lc">
+            <img src="stills/flynn.png" width="940" height="540"/>
+            <img src="stills/clu.png" width="940" height="540"/>
+        </div>
         <div class = "cl">
             <img src="stills/crashland.png" width = "940" height="540"/>
         </div>
-        <div class = "lc">
-            <img width="940" height="540"/>
-            <img width="940" height="540"/>
+        <div class="armanno">
+            <img src="stills/armanno.png" width="940" height="540"/>
+        </div>
+        <div class="ls">
+            <img src="stills/Lightsaber01.png" width="940" height="540"/>
+            <img src="stills/Lightsaber03.png" width="940" height="540"/>
         </div>
     </body>
 </html>
