--- a/picScripts/html/neb.html
+++ b/picScripts/html/neb.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <head>
     <title>Nebula</title>
-    <link rel="stylesheet" href="picScripts/neb.css"/>
+    <link rel="stylesheet" href="picScripts/css/neb.css"/>
 </head>
 <body>
-    
+    <div class="nebsc">
+        <img src="/stills/hiresnebula.png" width="940" height="540"/>
+        <img src="/stills/nebulafire.png" width="940" height="540"/>
+    </div>
 </body>
 </html>
