--- a/index.html
+++ b/index.html
@@ -1,12 +1,3 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>John's Showcase</title>
-        <link rel="stylesheet" href="main.css"/>
-    </head>
-    <body>
-        <a href="still.html" style="color: white;">Stills</a>
-        <a href="anim.html" style="color: white;">Animations</a>
-        <a href="abtme.html" style="color: white;">About Me</a>
-    </body>
-</html>
+version https://git-lfs.github.com/spec/v1
+oid sha256:ad3ed8e06597e49c44a4d1ce29e190f42dba0d3a84ac998d73f4efde8f8b12cf
+size 366
