--- a/abtme.html
+++ b/abtme.html
@@ -1,12 +1,3 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>About Me</title>
-        <link rel="stylesheet" href="abtme.css"/>
-    </head>
-    <body>
-        <h1>About Me</h1>
-        <h3>Hey! I'm John, a ninth grader from India who loves animation and technology in general. Most of my free time is spent on Blender, combining and creating art pieces. This website, and all the things that are a part of it have pieces of myself in them. Animation is one of the things that got me through the Lockdown, and its become something I've truly fallen in love with. That was all for now. I hope you enjoy going through my gallery.
-            -John.</h3>
-    </body>
-</html>
+version https://git-lfs.github.com/spec/v1
+oid sha256:e41047db545a1ceebaba79dcf072b8550bc3021040c175a32e0378813eb6d5c0
+size 669
