--- a/still.html
+++ b/still.html
@@ -1,89 +1,3 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>Still Gallery</title>
-        <link rel="stylesheet" href="still.css"/>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-        <script src="okzoom.js"></script>
-    </head>
-    <body>
-        <script type="text/javascript">
-        $(document).ready(() => {
-            $('.scene img').okzoom({
-            width: 200,
-            height: 200,
-            round: true,
-            background: "#000",
-            backgroundRepeat: "no-repeat",
-            shadow: "0 0 5px #000",
-            border: "1px solid black"
-            });
-        })
-        $(document).ready(() => {
-            $('.frost img').okzoom({
-            width: 200,
-            height: 200,
-            round: true,
-            background: "#000",
-            backgroundRepeat: "no-repeat",
-            shadow: "0 0 5px #000",
-            border: "1px solid black"
-            });
-        })
-        $(document).ready(() => {
-            $('.cl img').okzoom({
-            width: 200,
-            height: 200,
-            round: true,
-            background: "#000",
-            backgroundRepeat: "no-repeat",
-            shadow: "0 0 5px #000",
-            border: "1px solid black"
-            });
-        })
-        $(document).ready(() => {
-            $('.armanno img').okzoom({
-            width: 200,
-            height: 200,
-            round: true,
-            background: "#000",
-            backgroundRepeat: "no-repeat",
-            shadow: "0 0 5px #000",
-            border: "1px solid black"
-            });
-        })
-        </script>
-        <h1>Concept Canvas</h1>
-        <h3>Below are a few of my best creations. These are digitally rendered drawings, with extreme detail gone into each one. Various techniques have been used to design these. My personal favourite is the first one from the top, which took me a lot of time but was worth it. That was all about this page, my concept canvas! Let me know which one you liked the most!</h3>
-        <div class="nebula">
-            <a href="picScripts/html/neb.html"><img src="stills/hiresnebula.png" width="940" height="540"/>
-            <img src="stills/nebulafire.png" width="940" height="540"/></a>
-        </div>
-        <div class = "scene">
-            <img src="stills/scene1.png" width="940" height="540"/>
-            <a class = "scenet" href="picScripts/html/scene.html">Portal to hell</a>
-        </div>
-        <div class="frost">
-            <a class="frostt" href="picScripts/html/frost.html">Ice core</a>
-            <img src="stills/hiresfrostpink.png" width = "940" height = "540"/>
-        </div>
-        <div class = "lc">
-            <a href="picScripts/html/lc.html">
-            <img src="stills/flynn.png" width="940" height="540"/>
-            <img src="stills/clu.png" width="940" height="540"/></a>
-        </div>
-        <div class = "cl">
-            <img src="stills/crashland.png" width = "940" height="540"/>
-            <a class = "clt" href="picScripts/html/cl.html">Desert crash landing</a>
-        </div>
-        <div class="armanno">
-            <a class="arm" href="picScripts/html/ar.html">Ferrari Armanno</a>
-            <img src="stills/armanno.png" width="940" height="540"/>
-        </div>
-        <div class="ls">
-            <a href="picScripts/html/ls.html">
-            <img src="stills/Lightsaber03.png" width="940" height="540"/>
-            <img src="stills/Lightsaber01.png" width="940" height="540"/></a>
-        </div>
-    </body>
-</html>
+version https://git-lfs.github.com/spec/v1
+oid sha256:c43bb706296f2136ad3047c3ab269b2264b876f938cdb1d40b368f35a43e77ee
+size 3620
